# audio-orbit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: dev.ps1  dev.sh  setup-mutagen-wsl-dev.ps1
src/: audio-orbit.exe.manifest  audio.rs  audio_player.rs  audio_player_stub.rs  config.rs  dsp.rs  icon.rs  main.rs  media_keys.rs  recognition.rs  single_instance.rs  spectrum_waveform.rs  ui_icons.rs  updater.rs
