[package]
name = "audio-orbit"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
eframe = "0.31"
egui = "0.31"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com"
] }

[build-dependencies]
winresource = "0.1"
