[package]
name = "audio-orbit"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
directories = "5.0"
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
rfd = "0.15"
rodio = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winresource = "0.1"
