[package]
name = "audio-orbit"
version = "0.7.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
directories = "5.0"
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
lofty = "0.24"
lucide-icons = "1.21"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
rodio = { version = "0.19", features = ["symphonia-all"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winresource = "0.1"
